--- a/styles.css
+++ b/styles.css
@@ -846,12 +846,17 @@ grid-template-columns: repeat(3, 1fr);
 /* FAQ */
 .faq{
     margin: 50px 0px;
-    padding: 50px;
+    padding: 50px 400px;
     background-color: var(--darkBlue);
     display: flex;
     flex-direction: column;
     gap: 33px;
     color: white
+}
+.faq-item{
+    background-color: var(--lightRed);
+    box-shadow: 0px 2px 5px 0px rgb(0, 0, 0, 0.25);
+    font-size: 50px;
 }
 .faq-dropdown{
     background-color: var(--primaryRed);
@@ -863,9 +868,8 @@ grid-template-columns: repeat(3, 1fr);
     align-items: center;
     color: white;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 20px;
     letter-spacing: .033rem;
-
 }
 
 .faq h1{
@@ -889,10 +893,6 @@ grid-template-columns: repeat(3, 1fr);
 .carrot-rotate{
     transform: rotate(180deg);
 }
-.faq-item{
-    background-color: var(--lightRed);
-    box-shadow: 0px 2px 5px 0px rgb(0, 0, 0, 0.25);
-}
 .answer {
     font-family: 'Oswald', sans-serif;
     font-weight: 300;
@@ -912,6 +912,8 @@ grid-template-columns: repeat(3, 1fr);
     opacity: 1;
     max-height: 500px;
     padding: 15px;
+    font-weight: 300;
+    font-size: 18px;
     transition: opacity 0.3s ease-out;
 }
 
