--- a/styles.css
+++ b/styles.css
@@ -988,6 +988,12 @@ footer .logo h1{
     justify-content: center;
     gap: 10px;
 }
+a{
+    text-decoration: none;
+}
+footer a{
+    color: white;
+}
 .footer-social img{ /*footer section social media icons */
     height: auto;
     width: 35px;
@@ -1017,6 +1023,19 @@ footer .logo h1{
     }
 }
 @media only screen and (max-width: 1100px) { /* START OF WHEN NAV BAR WRAPS */
+    .faq-parallax, .main-parallax, .about-parallax, .food-parallax, .insta-parallax, .menu-parallax{
+        background-attachment: scroll;
+        background-position: center;
+        /* background-size: auto; */
+        width: 100%;
+    }
+    .faq-parallax, .about-parallax{
+        /* height: 110vh; */
+        background-position: bottom;
+    }
+    /* .menu-parallax{
+        background-repeat: repeat-y;
+    } */
     #toggle{
         display: flex;
     }
@@ -1241,7 +1260,7 @@ footer .logo h1{
         font-size: 18px;
     }
     .faq{
-        margin: 20px 0px;
+        margin: 0px 0px;
         padding: 30px;
     }
     .buffer{
@@ -1266,7 +1285,7 @@ footer .logo h1{
         padding-top: 20px;
     } */
     #toggle{
-        top: 35px;
+        top: 20px;
     }
     nav h1{
         font-size: 42px;
@@ -1389,7 +1408,7 @@ footer .logo h1{
         width: 700px;
     }
     .faq{
-        margin: 50px 0px;
+        margin: 0px 0px;
         padding: 50px 200px;
     }
     .about{
