--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,9 @@ nav{
     background-repeat: no-repeat;
     background-size: cover;
 }
+.menu-background{
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/bwNhaTrangOne.png') center/100% repeat-y;
+}
 .food-parallax {
     /* The image used */
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.70)), url('nhatrangImg/food.png') center/cover no-repeat;
@@ -122,7 +125,7 @@ nav{
     object-fit: cover;
 }
 .Layer_3{
-    width: 0%;
+    width: 40px;
     height: auto;
     text-align: center;
 }
@@ -1025,7 +1028,7 @@ footer a{
     width: 30px;
     height: 21px;
 }
-@media only screen and (min-width: 1170px) {
+@media only screen and (min-width: 1200px) {
     #toggle{
         display: none;
     }
@@ -1034,11 +1037,15 @@ footer a{
     }
 }
 @media only screen and (max-width: 1200px) { /* START OF WHEN NAV BAR WRAPS */
-    .faq-parallax, .main-parallax, .menu-parallax, .about-parallax, .food-parallax, .insta-parallax, .location-parallax{
+    .faq-parallax, .main-parallax, .about-parallax, .food-parallax, .insta-parallax, .location-parallax{
         background-attachment: scroll;
         background-position: center;
         /* background-size: auto; */
         width: 100%;
+    }
+    .menu-parallax{
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/bwNhaTrangOne.png') center/100% repeat-y;
+        background-size: 100%;    
     }
     #toggle{
         display: flex;
@@ -1124,7 +1131,7 @@ footer a{
         border-radius: 20px;
     }
     .Landing_Page_Content img{
-        width: 50vw;
+        width: 30vh;
     }
     .about{
         display: flex;
@@ -1282,7 +1289,6 @@ footer a{
         width: 70vw;
     }
 }       
-
  /*IPADDD */
 @media (min-width: 768px) and (max-width: 1100px) {
     /* nav{
@@ -1446,7 +1452,46 @@ footer a{
         margin: 0px 150px;
     }
 }
+@media only screen and (max-width: 900px) and (min-height: 300px) and (max-height: 500px)  {
+    .Nav_Bar_Links.active{
+        gap: 0px;
+    }
+    .Nav_Bar_Links li {
+        padding-bottom: 0px;
+    }
+    .Nav_Bar_Links li a{
+        font-size: 40px;
+    }
+    .active li a button {
+        height: 70px;
+        width: 300px;
+        font-size: 30px;
+        border-radius: 20px;
+    }
+    .Landing_Page_Content img {
+        /* margin-top: 200px; */
+        width: 200px;
+    }
+    .Landing_Page_Content h2{
+        font-size: 100px;
+    }
+    .main-parallax{
+        height: 1000px;
+    }
+    .home h2{
+        font-size: 100px; 
+    }
+    .Landing_Page_Content{
+        height: 123vh!important;
+    }
+    .buffer{
+    min-height: 55vh;
+    }
 
+    .buffer h1{
+        font-size: 60px;
+    }   
+}   
 /* @media (min-width: 1400px) {
   .dishes {
     grid-template-columns: repeat(3, 1fr);
